discussion/kv_engine/172796/172796_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Tidy DCPBackfillDisk state

1) Bring the enum inside the class
2) Change to enum class
3) Rename some states to better reflect how they change the flow

Change-Id: I84abb72c4aadec0ab0f196f64d3e31722e6c23f9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-03-31 08:21:41.000000000
Message: 
Patch Set 2: Patch Set 1 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-31 08:59:04.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44792/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [113/159]: test stats uuid...(13 ms) OK


99% tests passed, 2 tests failed out of 432

Total Test time (real) = 699.90 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44792/ )

Timeout of a CTest test 431/432 Test  #69: ep-engine_ep_unit_tests.DurabilityRespondAmbiguousTest ........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44792/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37687/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:194:10:
error: use of undeclared identifier "DCPBackfillByIdDisk"; did you mean "DCPBackfillDisk"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37687/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16280/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:194:10: error: use of undeclared identifier "DCPBackfillByIdDisk"; did you mean "DCPBackfillDisk"? [clang-diagnostic-error]
    case DCPBackfillByIdDisk::State::create:
         ^~~~~~~~~~~~~~~~~~~
         DCPBackfillDisk
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.h:77:7: note: "DCPBackfillDisk" declared here
class DCPBackfillDisk : public virtual DCPBackfill {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:197:10: error: use of undeclared identifier "DCPBackfillByIdDisk"; did you mean "DCPBackfillDisk"? [clang-diagnostic-error]
    case DCPBackfillByIdDisk::State::scan:
         ^~~~~~~~~~~~~~~~~~~
         DCPBackfillDisk
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.h:77:7: note: "DCPBackfillDisk" declared here
class DCPBackfillDisk : public virtual DCPBackfill {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:200:10: error: use of undeclared identifier "DCPBackfillByIdDisk"; did you mean "DCPBackfillDisk"? [clang-diagnostic-error]
    case DCPBackfillByIdDisk::State::complete:
         ^~~~~~~~~~~~~~~~~~~
         DCPBackfillDisk
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.h:77:7: note: "DCPBackfillDisk" declared here
class DCPBackfillDisk : public virtual DCPBackfill {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:203:10: error: use of undeclared identifier "DCPBackfillByIdDisk"; did you mean "DCPBackfillDisk"? [clang-diagnostic-error]
    case DCPBackfillByIdDisk::State::done:
         ^~~~~~~~~~~~~~~~~~~
         DCPBackfillDisk
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.h:77:7: note: "DCPBackfillDisk" declared here
class DCPBackfillDisk : public virtual DCPBackfill {
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16280/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:194:10:
error: use of undeclared identifier "DCPBackfillByIdDisk"; did you mean "DCPBackfillDisk"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16280/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15213/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/src/dcp/backfill_disk.h b/engines/ep/src/dcp/backfill_disk.h
index b141efe6a..a393f540a 100644
--- a/engines/ep/src/dcp/backfill_disk.h
+++ b/engines/ep/src/dcp/backfill_disk.h
@@ -101,7 +101,6 @@ protected:
     void cancel() override;
     void transitionState(State newState);
 
-
     /**
      * Create the scan, initialising scanCtx from KVStore initScanContext
      */

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15213/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26462/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5938/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17136/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18378/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18053/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19086/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5998/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
